--- a/app/src/main/res/layout/login_mobile.xml
+++ b/app/src/main/res/layout/login_mobile.xml
@@ -14,13 +14,13 @@
         android:gravity="center"/>
 
     <EditText
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
         android:layout_below="@id/signin"
+        android:layout_marginHorizontal="10sp"
         android:hint="아이디"
-        android:textSize="16sp"
-        android:layout_marginHorizontal="10sp"/>
+        android:textSize="16sp" />
 
     <EditText
         android:layout_width="match_parent"
